Update backend configuration and dependencies

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/history-books
+MONGODB_URI=mongodb+srv://oca2402it0007_db_user:okyp8PKpKqfF0mJc@cluster0.1ckcszp.mongodb.net/history-books
 PORT=5000
 JWT_SECRET=your_jwt_secret_key_change_this_in_production
